secondfile/objects/Portal_Contact_Us_EBM_Email__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of internal e-mail addresses to send e-mails to when the Contact Us page is accessed through the Portal.</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Portal Contact Us EBM Email</label>
</CustomObject>